<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DevelopersSupport"
    android:background="@color/developerPage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="100">

            <EditText
                android:id="@+id/editUserName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:hint="@string/your_name"
                android:layout_marginTop="15dp"
                android:inputType="textPersonName"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/feedbackTypeSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:entries="@array/feedbacktypelist"
                android:prompt="@string/feedbacktype" />

            <EditText
                android:id="@+id/editFeedbackMessage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/message_text"
                android:inputType="textMultiLine"
                android:lines="5"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/responseCheckBox"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="15"
                android:text="Желаете получить ответ?"
                android:textColor="@color/navigation_bar_background"
                android:textSize="26sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/sendFeedBack"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_bright"
                    android:text="@string/send_message"
                    android:textColor="@color/navigation_bar_background"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/clearAllRows"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_red_dark"
                    android:text="@string/clear_message"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>