<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wrapper"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="100"
    android:maxHeight="110dp"
    android:orientation="vertical"
    android:weightSum="100">

    <TextView
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="100"
        android:text="TextView"
        android:visibility="gone" />

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="100"
        android:background="@color/dateColor"
        android:gravity="center"
        android:text="date"
        android:textColor="@color/activity_main_dark_gold"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="100"
        android:gravity="center"
        android:minHeight="100dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="40"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="100">

            <TextView
                android:id="@+id/area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="90"
                android:background="#c2ae6d"
                android:gravity="center"
                android:text="25 cm"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:background="@color/TextHighlight"
                android:gravity="center"
                android:text="@string/area_measure"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="40"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="100">

            <TextView
                android:id="@+id/perimeter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="90"
                android:background="#c2956d"
                android:gravity="center"
                android:text="25 cm"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:background="@color/TextHighlight"
                android:gravity="center"
                android:text="@string/perimeter_measure"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="100">

            <TextView
                android:id="@+id/dots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="90"
                android:background="@color/measure_mono_type"
                android:gravity="center"
                android:text="25 cm"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:autoSizeMaxTextSize="20dp"
                android:autoSizeMinTextSize="10dp"
                android:background="@color/TextHighlight"
                android:gravity="center"
                android:text="@string/dots"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>